--- a/bbscheduler.tex
+++ b/bbscheduler.tex
@@ -457,9 +457,9 @@ In both stage-in and stage-out phases, Cerberus
 allocates the BB resources to achieve the maximumdata transfer throughput
 between BB and the external storage system.
 In the running phase, Cerberus maximizes the predefined profit of the scheduled jobs.
-Simulation results %of Cerberus scheduling the BB-enabled supercomputer platform 
+The simulation results %of Cerberus scheduling the BB-enabled supercomputer platform 
 demonstrate that
-1) comparing to non-BB systems, Cerberus accelerates the execution pipeline of all tasks and reduces the response time of 99\% jobs;
+1) compared to non-BB systems, Cerberus accelerates the execution pipeline of all tasks and reduces the response time of 99\% jobs;
 2) on BB-enabled systems, 3-phase Cerberus and BB oriented optimization improve the average system throughput by 62.31\%.
 \end{abstract}
 
