--- a/intro.tex
+++ b/intro.tex
@@ -71,13 +71,14 @@ which is still far from the target of 60 TB/s for extra-scale computing platform
 % The challenge roots in the missing gap in supercomputers' memory hierarchy.
 % The IO rate ratio of memory to external storage 
 % is 100 to 10,000 cycles\cite{TrinitySystem}.
-Such a gap makes difference because scientific applications are exposed to
+%Such a gap makes difference 
+The gap is critical because scientific applications are exposed to
 ``bursty" I/O patterns\cite{Carns:MSST:2011, Kim:PDSW:2010},
 resulting from application's
 defensive I/O strategy\cite{Latham:CSD:2012, Naik:ICPPW:2009, Dennis:CUG:2009}
 and the needs of subsequent data processing.
-When multiple applications try to access the storage system simultaneously,
-the I/O bandwidth is very likely to be saturated and then severe performance degradation incurs.
+When multiple applications attempt to access the storage system simultaneously,
+the I/O bandwidth is very likely to be saturated leading to severe performance degradation.
 
 
 %3. Very high level intro to burst buffer
@@ -90,11 +91,10 @@ This new storage component works as a cache tier to absorb and spread out
 the ``bursty" application I/O pattern\cite{Bent:HBP:2011, Grider:EXA:2010}.
 % This new cache tier is capable of absorbing and spreading out 
 % the ``bursty" application I/O pattern\cite{Bent:HBP:2011, Grider:EXA:2010}.
-Researchers\cite{Liu:MSST:2012} have demonstrated that the perceived applications I/O
-bandwidth are significantly improved on the burst buffer enabled system.
-Due to the benefit of utilizing burst buffer,
-users are encouraged to explicitly request this new resource for 
-their applications when running on burst buffer enabled systems \cite{apex-workflow}.
+Researchers\cite{Liu:MSST:2012} have demonstrated that the perceived application I/O
+bandwidth is significantly improved on the burst buffer enabled system.
+%Because of the benefits of utilizing burst buffer,
+Users are also encouraged to explicitly request BB resources to achieve high application performance on burst buffer enabled systems \cite{apex-workflow}.
 
 %4. Our work, a new batch scheduler
 In this paper, we propose Cerberus\footnote{In Greek mythology,
@@ -107,19 +107,19 @@ based on the most important usage cases of burst buffer:
 application checkpoint restart and staging in/out data. 
 The lifetime of a user job is typically divided into three ordered phases:
 \textit{stage in}, \textit{running}, and \textit{stage-out}.
-While only the running phase requires compute nodes, burst buffer are used for different
-purpose in all three phases.
+While only the running phase requires compute nodes, burst buffers are used for different
+purposes in all three phases.
 Unlike existing batch schedulers that 
 make the scheduling decision only once for each job upon its submission, 
 Cerberus participates in all three phases and makes the most optimal
-scheduling decision at each phase respectively based on the evaluation of the job's requirement.
+scheduling decision at each phase based on the evaluation of the job's requirement.
 % Cerberus re-evaluates the job's requirement at each phase 
 % and makes the optimal scheduling decisions respectively.
 
 %5. The advantage of Cerberus.
-Both the system and user jobs can benefit from Cerberus 3-phase scheduling.
+Both the system and user jobs can benefit from the Cerberus 3-phase scheduling.
 System responsiveness can be greatly improved in that
-user jobs expect less wait time. 
+user jobs expect less wait time (\textbf{consider revise this sentence}). 
 The resources become highly available as the allocation and deallocation of
 both burst buffer and compute nodes are performed in fine granularity. 
 % The burst buffer and compute nodes will be released immediately
@@ -151,41 +151,39 @@ system throughput also gets boosted.
 % \end{enumerate}
 
 %===========XY==========
-Our contributions in this paper are summarized as follows:
+Our contributions are summarized as follows:
 \begin{enumerate}
         \item %Explore how HPC workload scheduler allocates burst buffer resources.
-                We propose a 3-phase job model tailored the typical
-                usage cases of burst buffer, that is, checkpoint restart,
-                data stage in and stage out.
+                We propose a 3-phase job model, i.e.,  checkpoint restart,
+                data stage in and stage out, that tailors the typical usage of burst buffer.
         \item   We present Cerberus,
                 a burst buffer aware batch scheduler for 3-phase modeled jobs.
                 Dividing the lifetime of a user job to different phases,
                 Cerberus can make the holistically optimal scheduling decisions 
                 for a job through each phase.
         \item   We suggest different optimizing goals in each phase.
-                Though optimal scheduling problem in each phase is NP-hard,
-                dynamic programming could give precise solutions
+                Though the optimal scheduling problem in each phase is NP-hard,
+                dynamic programming generates precise solutions
                 in practice.
-        \item   We develop BBSim, a event-driven simulator for scheduling
+        \item   We develop BBSim, an event-driven simulator for scheduling
                 burst buffer enabled HPC systems.
-                Although BBSim is motivated by simulating Cerberus scheduling 
+                BBSim is motivated by simulating Cerberus and scheduling 
                 3-phase modeled jobs with burst buffer requirement,
-                it also supports various kind of batch schedulers.
+                it also supports various types of batch schedulers.
 \end{enumerate}
 
 
 In the remainder of this paper,
 the next section talks about the status quo of burst buffer and
 the motivation of our work.
-Section~\ref{Sec:Model} begins elaborating the 3-phase model,
+Section~\ref{Sec:Model} elaborates the 3-phase model,
 after which Cerberus is introduced in Section~\ref{Sec:Scheduler}.
 The details of formulating and solving scheduling problem
 at each phase are enumerated in Section~\ref{Sec:Opt}.
-Core events in simulating Cerberus and execution logic of BBSim are
-briefly discussed in Section~\ref{Sec:Simulation}.
+Core events in simulating Cerberus and the execution logic of BBSim are discussed in Section~\ref{Sec:Simulation}.
 We validate Cerberus by simulating the burst buffer enabled
 Trinity supercomputing platform on BBSim (Section~\ref{Sec:Experiments}).
 Related works are discussed in Section~\ref{Sec:RelatedWorks}.
-We conclude this paper and list possible future works in Section~\ref{Sec:Conclusion}.
+We conclude the paper with future works in Section~\ref{Sec:Conclusion}.
 
 
