--- a/background.tex
+++ b/background.tex
@@ -19,11 +19,11 @@
 
 %==========XY===========
 %1. The appear of burst buffer
-Burst buffer enabled I/O architecture can help alleviating
+Burst buffer enabled I/O architecture can help to alleviate
 the ever-increasing I/O pressure on HPC systems.
 Burst buffer nodes debut as a rescue by utilizing various new storage technologies,
 such as non-volatile random-access memory (NVRAM) and solid state drive (SSD).
-In practice, burst buffer can suits up with DataWarp I/O accelerator\cite{DataWarp}.
+In practice, burst buffer suits up with DataWarp I/O accelerator\cite{DataWarp}.
 Figure \ref{Fig:BBArchitecture} illustrates one possible burst buffer enabled architecture,
 adopted by the Trinity System\cite{TrinitySystem}.
 %The volume of data read/write may affect the architecture model of burst buffer.
@@ -31,8 +31,8 @@ In Trinity, the burst buffer node is composed of one I/O node and 2 PCIe SSD car
 connected via 16 PCIe 3.0 interfaces.
 Alternatively, many researchers proposed to distribute burst buffer 
 on multiple layers of the memory hierarchy\cite{Romanus:CORR:15}.
-For example, they may be deployed at local computer nodes, board in cabinet or I/O nodes.
-Burst buffer may also be utilized as intermediate storage system.
+For example, they may be deployed on local computer nodes, board in the cabinet or I/O nodes.
+Burst buffer may also be utilized as intermediate storage systems.
 
 % % %2. Use cases of burst buffer
 % % Regardless of the specific implementation, burst buffer nodes essentially augment
@@ -62,15 +62,15 @@ Burst buffer may also be utilized as intermediate storage system.
 
 %2. Use cases of burst buffer
 Regardless of the specific implementation, burst buffer nodes essentially augment
-the I/O stack with a intermediate, productive offloading layer, 
+the I/O stack with an intermediate productive offloading layer, 
 which can benefit jobs in multiple ways.
 As discussed in some preliminary surveys\cite{BBUseCase, apex-workflow} ,
-jobs' latest checkpoint can be pre-staged
+jobs' latest checkpoints can be pre-staged
 before previous job terminates;
 jobs can burst checkpoint to burst buffer
 with extremely high speed (4.4-17.8 TB/s on Trinity);
 upon termination, jobs are also able to drain off output data
-asynchronously to external parallel file system.
+asynchronously to the external parallel file system.
 The bursty I/O operations can thus be aggregated and absorbed into burst buffers,
 making it possible to shift computations that follows I/O bursts to an earlier moment
 while burst buffer nodes take charge of moving potentially TB-level volumes of data.
@@ -79,7 +79,7 @@ Among them \textit{data cache} could be equally important to enhance the respons
 of applications by improving the perceived I/O bandwidth\cite{BBUseCase}.
 Shared object library or read-only configuration files could be
 cached into burst buffer;
-Lists of input files specific to a group of compute nodes allocated to
+Lists of input files specific to a group of computing nodes allocated to
 a particular job could be loaded into burst buffer prior to execution;
 Economical solid-state disks as a tier of burst buffer could also be used as
 out-of-core complement to insufficient main memory\cite{Romanus:CORR:15},
@@ -122,20 +122,20 @@ the allocation of these precious I/O resources.
 This naturally falls into the responsibility of the batch scheduler.
 Unfortunately, existing schedulers
 either have not yet been aware to burst buffer\cite{Moab, Cobalt}
-or just use straight forward allocation policy such as first-come, first-served\cite{SlurmBBGuide}.
+or just use straight forward allocation policy, such as first-come first-served\cite{SlurmBBGuide}.
 This paper tries to bridge two isolated fields of HPC architecture,
 the novel burst buffer equipped HPC IO subsystem and
 traditional batch job queueing subsystem.
-The bridge build upon a 3-phase job model that motivated by the most
+The bridge builds upon a 3-phase job model that motivated by the most
 important usage cases of burst buffer:
 application checkpoint restart and data pre-fetch/cache.
 
 In this work, we demonstrate that when burst buffer is intelligently allocated 
 by our novel batch scheduler,
 the benefit will be more than just higher transfer bandwidth.
-Jobs execution will be expedited by having their bursty checkpoint-purpose I/O requests 
+The job execution will be expedited by having their bursty checkpoint-purpose I/O requests 
 absorbed by burst buffer.
-Jobs waiting time will be reduced via
+The job waiting time will be reduced via
 contracted input/output stage in the scheduling pipeline.
 To our best knowledge, this is the first attempt to holistically 
 schedule jobs running on the new burst buffer enabled HPC system.
