--- a/intro.tex
+++ b/intro.tex
@@ -65,8 +65,8 @@ between computational resources and disk-based storage technologies.
 % but still far from the target of 60 TB/s for 
 % extra-scale computing platform\cite{Shalf:HPCCS:2010}.
 For example, on the early-state Trinity system~\cite{TrinitySystem}, the I/O nodes between
-the compute nodes and external storage can deliver data at  the speed of 810 GB/s, 
-which is still far from the target of 60 TB/s for extra-scale computing platform\cite{Shalf:HPCCS:2010}.
+the compute nodes and the external storage can deliver data at  the speed of 810 GB/s, 
+which is still far from the target of 60 TB/s for the extra-scale computing platform\cite{Shalf:HPCCS:2010}.
 %2. Challenge to current IO architecture and burst buffer come to resuce.
 % The challenge roots in the missing gap in supercomputers' memory hierarchy.
 % The IO rate ratio of memory to external storage 
@@ -77,55 +77,51 @@ The gap is critical because scientific applications are exposed to
 resulting from application's
 defensive I/O strategy\cite{Latham:CSD:2012, Naik:ICPPW:2009, Dennis:CUG:2009}
 and the needs of subsequent data processing.
-When multiple applications attempt to access the storage system simultaneously,
-the I/O bandwidth is very likely to be saturated, leading to severe performance degradation.
+When multiple applications attempt to access the storage system simultaneously, it is easy to saturate the 
+the I/O bandwidth leading to severe performance degradation.
 
 
 %3. Very high level intro to burst buffer
-There have been various research on the topic of improving I/O performance on HPC systems from
+Extensive research have been conducted to improve I/O performance on HPC systems from
 both hardware and software layers.
-Recent years have witnessed a tremendously growing popularity grained by flash memory  based storage.
+We have witnessed a tremendously growing popularity grained by flash memory based storage in recent years.
 Burst Buffer, an innovative cache tier utilizing solid-state disks and in-memory flash, 
-is developed to bridge the gap between computational resources and external storage.
+is developed to bridge the gap between the computational resources and the external storage.
 This new storage component works as a cache tier to absorb and spread out
-the ``bursty" application I/O pattern\cite{Bent:HBP:2011, Grider:EXA:2010}.
+the ``bursty" application I/O patterns\cite{Bent:HBP:2011, Grider:EXA:2010}.
 % This new cache tier is capable of absorbing and spreading out 
 % the ``bursty" application I/O pattern\cite{Bent:HBP:2011, Grider:EXA:2010}.
-Researchers\cite{Liu:MSST:2012} have demonstrated that the perceived application I/O
-bandwidth is significantly improved on the burst buffer enabled system.
+Researchers\cite{Liu:MSST:2012} have demonstrated that the perceived I/O
+bandwidth is significantly improved on the BB-enabled system.
 %Because of the benefits of utilizing burst buffer,
-Users are also encouraged to explicitly request BB resources to achieve high application performance on burst buffer enabled systems\cite{apex-workflow}.
+Users are in fact encouraged to explicitly request BB resources to achieve high application performance on BB-enabled systems\cite{apex-workflow}.
 
 %4. Our work, a new batch scheduler
 In this paper, we propose Cerberus\footnote{In Greek mythology,
 Cerberus is a monstrous 3-headed dog (3-phase scheduler),
-who guards the gates of the underworld to earth (HPC system),
+who guards the gate of the underworld to the earth (HPC system),
 preventing the dead (jobs) from leaving (running).},
-a novel batch scheduler for burst buffer enabled HPC systems. 
-We propose a 3-phase model for user jobs
-based on the most important usage cases of burst buffer: 
+a novel batch scheduler for BB-enabled HPC systems. 
+We propose a 3-phase model for user jobs based on the critical use cases of burst buffer, including
 application checkpoint restart and staging in/out data. 
 The lifetime of a user job is typically divided into three ordered phases:
 \textit{stage in}, \textit{running}, and \textit{stage-out}.
-While only the running phase requires compute nodes, burst buffers are used for different
-purposes in all three phases.
-Unlike existing batch schedulers that 
-make the scheduling decision only once for each job upon its submission, 
-Cerberus participates in all three phases and makes the most optimal
-scheduling decision at each phase based on the evaluation of the job's requirement.
+While only the running phase requires compute nodes, burst buffer is used for different
+purposes in all the three phases.
+Unlike existing batch schedulers that make only one scheduling decision for each job upon its submission, 
+Cerberus participates in all three phases and makes the optimal scheduling decision at each phase based on the evaluation of the job's requirement.
 % Cerberus re-evaluates the job's requirement at each phase 
 % and makes the optimal scheduling decisions respectively.
 
 %5. The advantage of Cerberus.
 Both the system and user jobs can benefit from the Cerberus 3-phase scheduling.
-System responsiveness is greatly improved as Cerberus reduces the waiting time of most of the user jobs.
+The system responsiveness is greatly improved as Cerberus reduces the waiting time of most of the user jobs.
 The resources become highly available as the allocation and deallocation of
-both burst buffer and compute nodes are performed in fine granularity. 
+both burst buffer and compute nodes are performed in a fine granularity. 
 % The burst buffer and compute nodes will be released immediately
 % if the job don't need them in the next phase,
 % and become available to the following jobs.
-As Cerberus takes advantage of the parallelism of jobs in different phases,
-system throughput also gets boosted.
+As Cerberus takes advantage of the parallelism of jobs in different phases, the system throughput also gets boosted.
 %6. Summarize our contribution
 % Our contributions in this paper are summarized as follows:
 % \begin{enumerate}
@@ -154,35 +150,29 @@ Our contributions are summarized as follows:
 \begin{enumerate}
         \item %Explore how HPC workload scheduler allocates burst buffer resources.
                 We propose a 3-phase job model, i.e.,  checkpoint restart,
-                data stage in and stage out, that tailors the typical usage of burst buffer.
+                data stage in and stage out, which enrichs the typical usage of burst buffer.
         \item   We present Cerberus,
-                a burst buffer aware batch scheduler for 3-phase modeled jobs.
-                Dividing the lifetime of a user job to different phases,
+                a burst-buffer-aware batch scheduler for 3-phase modeled jobs.
+                Dividing the lifetime of a user job to different phases, and
                 Cerberus can make the holistically optimal scheduling decisions 
                 for a job through each phase.
         \item   We suggest different optimizing goals in each phase.
-                Though the optimal scheduling problem in each phase is NP-hard,
-                dynamic programming generates precise solutions
+                While the optimal scheduling problem in each phase is NP-hard,
+                our dynamic programming based approach generates precise solutions
                 in practice.
         \item   We develop BBSim, an event-driven simulator for scheduling
-                burst buffer enabled HPC systems.
+                burst-buffer-enabled HPC systems.
                 BBSim is motivated by simulating Cerberus and scheduling
-                3-phase modeled jobs with burst buffer requirement,
-                it also supports various types of batch schedulers.
+                3-phase modeled jobs with the burst buffer requirements.
+                BBSim also supports various types of batch schedulers.
 \end{enumerate}
 
 
-In the remainder of this paper,
-the next section talks about the status quo of burst buffer and
-the motivation of our work.
-Section~\ref{Sec:Model} elaborates the 3-phase model,
-after which Cerberus is introduced in Section~\ref{Sec:Scheduler}.
-The details of formulating and solving scheduling problem
-at each phase are enumerated in Section~\ref{Sec:Opt}.
-Core events in simulating Cerberus and the execution logic of BBSim are discussed in Section~\ref{Sec:Simulation}.
-We validate Cerberus by simulating the burst buffer enabled
-Trinity supercomputing platform on BBSim (Section~\ref{Sec:Experiments}).
-Related works are discussed in Section~\ref{Sec:RelatedWorks}.
-We conclude the paper with future works in Section~\ref{Sec:Conclusion}.
+In the remainder of this paper, Section 2 presents the status quo of burst buffer and
+the motivation.
+Section~\ref{Sec:Model} elaborates the 3-phase model, and Section~\ref{Sec:Scheduler} overviews Cerberus. 
+Section~\ref{Sec:Opt} illustrates the details of formulating and solving the scheduling problem at each phase. Section~\ref{Sec:Simulation} describes the core events of simulating Cerberus and the execution logic of BBSim. Section~\ref{Sec:Experiments} validates Cerberus by simulating the burst-buffer-enabled
+Trinity supercomputing platform on BBSim. Section~\ref{Sec:RelatedWorks} discusses the related works. 
+Section~\ref{Sec:Conclusion} concludes the paper with future works.
 
 
