--- a/model.tex
+++ b/model.tex
@@ -1,11 +1,11 @@
 %\section{BB Aware Job Model}
-\section{Burst Buffer Aware Job Modeling}
+\section{Burst-buffer-aware Job Modeling}
 \label{Sec:Model}
 
 \begin{figure}[htp]
         \centering
         \includegraphics[width=3.6in]{CerberusBBSystem}
-        \caption{Scheduling Workflow of Burst Buffer Aware Cerberus}
+        \caption{Scheduling Workflow of the Burst-buffer-aware Cerberus}
         \label{Fig:CerberusQueues}
 \end{figure}
 
@@ -20,18 +20,15 @@
 % % BB are able to be shared by applications with any fractional amount.
 
 %============XY==========
-When users submit their jobs to burst buffer enabled systems, they can specify the 
-demand of compute nodes, burst buffer and expected running time for each job.
-The batch scheduler makes scheduling decisions for each job based on its demand while trying to 
-minimize overall job response time and maximize system throughput. 
-However, jobs require for more than one resource could result in possible deadlock and starvation.
-In order to improve the overall resource utilization and system responsiveness, we propose
-a fine granularity job model based on the possible usage cases of burst buffer.  
-In our scheduling framework, 
-the system resources that scheduler targets for making scheduling decision are
-compute nodes and burst buffer.
-Jobs' resource demand varies in different execution phases;
-correspondingly, the batch scheduler makes scheduling decisions in each phase.
+When users submit their jobs to burst-buffer-enabled systems, they can specify the 
+demand of compute nodes and burst buffer and the expected running time for each job.
+The batch scheduler makes scheduling decisions for each job based on its demand while attempting to 
+minimize the overall job response time and maximize the system throughput. 
+However, jobs requiring more than one resource could result in possible deadlocks and starvation.
+In order to improve the overall resource utilization and the system responsiveness, we propose
+a fine granularity job model based on the possible use cases of burst buffer.  
+In our scheduling framework, the system resources include compute nodes and burst buffer.
+The job resource demand varies in different execution phases; Correspondingly, the batch scheduler makes scheduling decisions in each phase.
 
 
 % Users request the system to run their applications as jobs.
@@ -54,36 +51,35 @@ correspondingly, the batch scheduler makes scheduling decisions in each phase.
 
 %=============Xu======================
 \subsection{Three-Phase Job Model}
-Applications can benefit from burst buffer in 3 major ways\cite{BBUseCase}.
-Before execution, job pre-fetch data from external storage to burst buffer.
-When jobs start running on compute nodes,
-they could burst the checkpoint data to burst buffer at high speed.
-Upon the job completion, useful output data are staged out to the burst buffer in order to release compute node early.
+Applications can benefit from burst buffer in three major ways\cite{BBUseCase}.
+Before execution, job pre-fetch data from the external storage to the burst buffer.
+When jobs start running on the compute nodes,
+they could burst the checkpoint data to the burst buffer at high speed.
+Upon the job completion, useful output data are staged out to the burst buffer for early releasing the compute nodes.
 Therefore, we divide the job lifetime into three different phases to
-fit in burst buffer's 3 usage cases,
-as shown in Figure~\ref{Fig:CerberusQueues}.
+fit in the three use cases of burst buffer, as shown in Figure~\ref{Fig:CerberusQueues}.
 
-\textbf{Stage-In}: After the job being submitted to the system,
-         it needs to pre-fetch data, such as configuration files and input data,
-         from IO nodes to burst buffer. We refer this phase as \textit{stage-in}.
-         The only resource needed by the job in this phase is burst buffer.
+\textbf{Stage-In}: After submitting the job to the system,
+         Cerberus needs to pre-fetch data, such as configuration files and input data,
+         from IO nodes to the burst buffer. We define this phase as \textit{stage-in}.
+         The only resource needed by the job in this phase is the burst buffer.
          Users are encouraged to specify the amount of burst buffer required in the \textit{stage-in} phase.
-         The job is ready to run when the data is pre-fetched into burst buffer.
+         The job is ready to run when the data is pre-fetched into the burst buffer.
  
 \textbf{Running}: The scheduler allocates the job with the required
          number of compute nodes and the amount of burst buffer. 
          It then dispatches the job to the system for running.
-         This is referred as \textit{running} phase.
+         This is defined as \textit{running} phase.
          During the running phase, there could be frequent data exchange
-         between compute node and burst buffer.
-         These interactions are mainly due to fault tolerance reasons, like check-pointing. 
+         between the compute nodes and the burst buffer.
+         These interactions, such as like check-pointing, are mainly for achieving system fault tolerance. 
  
 \textbf{Stage-out}: When the job finishes computation and
          exits the \textit{running} phase, its output data need to be drained out
-         to external storage from the on-node memory. We refer this as \textit{stage-out} phase.
+         to the external storage from the on-node memory. We define this as \textit{stage-out} phase.
          The job can release its compute nodes when the output data are staged out
-         into burst buffer at high speed. The burst buffer plays as an efficient
-         IO broker for the compute nodes and drain the output data out to the external storage.
+         into the burst buffer at high speed. The burst buffer serves as an efficient
+         IO broker for the compute nodes and drains the output data to the external storage.
 
 %While burst buffer has been utilized during all three phases,
 %compute nodes are only required during the \textit{running} phase. 
@@ -112,24 +108,23 @@ as shown in Figure~\ref{Fig:CerberusQueues}.
 % \textit{1-phase modeled jobs} thereafter.
 
 %=========XY===============
-Jobs are submitted to system with specified resource demand. 
+Jobs are submitted to the system with the specified resource demand. 
 Each job is associated with a demand vector in the form of $(c, ert)$, 
-where $c$ is the number of needed compute node in running phase,
+where $c$ is the number of needed compute nodes in the running phase,
 $ert$ is the expected runtime. 
-In a burst buffer enabled system, demand vector should be augmented
-with fields defining user's request for burst buffer capacity.
-We consider two possible ways that users provide burst buffer demand.
-For the user with accurate speculation about his job's burst buffer demand in each phase,
-he may provide a \textit{burst buffer triple} in the form of $(bb\_in, bb\_run, bb\_out)$,
+In a burst-buffer-enabled system, the demand vector should be augmented
+with fields defining user's requests on the burst buffer capacity.
+We consider two possible ways that users provide the burst buffer demand.
+For the users with accurate speculation about their job's burst buffer demand in each phase,
+they may provide a \textit{burst buffer triple} in the form of $(bb\_in, bb\_run, bb\_out)$,
 where $bb\_in$ is the volume of burst buffer for staging in data files,
-$bb\_run$ is for checkpointing during running,
+$bb\_run$ is for checkpointing during the execution, and 
 $bb\_out$ is for staging out the output data.
 % A job that providing demand vector augmented with
 % burst buffer triple is called a \textit{3-phase modeled job}.
-We will show that providing jobs burst buffer demand in the form of \textit{burst buffer triple} 
-will yield great benefit in the following section.
+We will show the benefits of providing the job burst buffer demand in the form of \textit{burst buffer triple} in the next section.
 Alternatively, a user may just use the $\max\{bb\_in, bb\_run, bb\_out\}$ 
-as job's burst buffer demand in the whole lifetime. 
+as the job's burst buffer demand in the whole lifetime. 
 % We refer this augmentation as
 % \textit{1-phase modeled jobs} thereafter.
 
@@ -186,11 +181,11 @@ as job's burst buffer demand in the whole lifetime.
                 $bb\_in_i$ & burst buffer demand of $job_i$ at \textit{stage-in} phase \\
                 $bb\_run_i$ & burst buffer demand of $job_i$ at \textit{running} phase \\
                 $bb\_out_i$ & burst buffer demand of $job_i$ at \textit{stage-out} phase \\
-                $rt_i$ & running time of $job_i$ recorded in log trace \\
+                $rt_i$ & running time of $job_i$ recorded in the log trace \\
                 $ert_i$ & estimated or expected running time of $job_i$ \\
                 $Q_I, Q_R, Q_O$ & queues for \textit{stage-in, running, stage-out} phases \\
                 $J_{Q_I}, J_{Q_R}, J_{Q_O}$ & set of jobs in corresponding queues \\
-                $\mathcal{J}_{Q_I}, \mathcal{J}_{Q_R}, \mathcal{J}_{Q_O}$ & selected jobs from corresponding queues\\
+                $\mathcal{J}_{Q_I}, \mathcal{J}_{Q_R}, \mathcal{J}_{Q_O}$ & selected jobs from the corresponding queues\\
                 $p_i$ & profit of $job_i \in J_{Q_R}$ \\
                 $dp(\cdot)$ & memo used in dynamic programming \\
                 \hline
